refactoring DTOs 2